# opentecr-schema

./: .cruft.json  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  dummy.py  json_schema.py  mkdocs.yml  openTECR.json  pyproject.toml  requirements.in  schema_main.uml  sql_schema.py  tox.ini
.github/: CONTRIBUTING.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  config.yml
.github/workflows/: main.yml
docs/: index.md
orm/: curated_measurement.py  metabolite_name.py  namespace.py  participant.py  reaction_annotation.py  representative_reaction.py  user.py
orm/mixin/: __init__.py  timestamp_mixin.py
output/: openTECR.json
scripts/: json_schema.py  sql_schema.py
src/opentecr/: __init__.py
src/opentecr/data/: __init__.py  annotation.py  base.py  contributor.py  curated_measurement.py  literature_reference.py  metabolite.py  representative_reaction.py
src/opentecr/orm/: __init__.py  literature_reference.py  metabolite.py  metabolite_annotation.py  metabolite_name.py  participant.py  reaction_annotation.py  reaction_name.py
src/opentecr/orm/mixin/: annotation_mixin.py  model_mixin.py  name_mixin.py
src/opentecr_data_model/: __init__.py  annotation.py  base.py  contributor.py  curated_measurement.py  metabolite.py  representative_reaction.py
tests/integration/: test_json_schema.py
tests/system/: test_import.py
traffic/: clones.csv  views.csv
